Sunday night edits
Here i finished up services and the contact us tabs; WARNING dank memes found.

--- a/contact.html
+++ b/contact.html
@@ -30,12 +30,16 @@
 
 					<header class="major special">
 						<h2>Contact Us</h2>
-						<p>We provide the modern aesthetics to your office</p>
+						<p>Contact us one of the following ways.</p>
 					</header>
 
-					<a href="#" class="image fit"><img src="images/office.jpg" alt="" /></a>
-					<p>Our commercial experience is unparallel...</p>
-
+					<a href="#" class="image fit"><img src="images/tabaccoFarm.jpg" alt="" /></a>
+					<p>Here is a tabacco farm, where thousands of your cigarrets come from. </p>
+					<h2>Tabacco Fun Fact =D </h2>
+					<p>Tabacco claims the lives on average of about 7 million humans every year.
+						<br>Now idk about you, but thats a pretty big number dont you think? When only about 1.35 million humans die from car accidents each year.... <br>Thats means your more likely to smoke yourself to death than drive yourself to death. </p>
+					<h1>WHAT A GREAT FACT!</h1>
+					</p>
 				</div>
 			</section>
 
