--- a/services.html
+++ b/services.html
@@ -31,12 +31,14 @@
 
 					<header class="major special">
 						<h2>Services</h2>
-						<p>We provide the modern aesthetics to your office</p>
+						<p>These are just some of the services that we provide you</p>
 					</header>
 
-					<a href="#" class="image fit"><img src="images/office.jpg" alt="" /></a>
-					<p>Our commercial experience is unparallel...</p>
-
+					<a href="#" class="image fit"><img src="images/catMeme.jpg" alt="" /></a>
+					<p>Cats are so funny lol.</p>
+					<!-- Dank video here lol-->
+					<h2>Now here is a dank dino vid</h2>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/7G4RYtP5RQQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 			</section>
 
